--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1295,6 +1295,22 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    (function(){
+      function _modal(el){ return { show:function(){ if(el){ el.classList.add('show'); el.style.display='block'; } }, hide:function(){ if(el){ el.classList.remove('show'); el.style.display='none'; } } }; }
+      function _alert(el){ return { close:function(){ try{ el.remove(); }catch(e){} } }; }
+      function _toast(el){ return { show:function(){ if(el){ el.classList.add('show'); } }, hide:function(){ if(el){ el.classList.remove('show'); } } }; }
+      function _tooltip(el){ return {}; }
+      if(!window.bootstrap){
+        window.bootstrap = { Modal:_modal, Alert:_alert, Toast:_toast, Tooltip:_tooltip };
+        try{
+          var s=document.createElement('script');
+          s.src='https://unpkg.com/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js';
+          document.head.appendChild(s);
+        }catch(e){}
+      }
+    })();
+    </script>
     <div class="modal fade" id="multiStoreModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
