--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1125,6 +1125,7 @@
     
     {% block extra_css %}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/readability-rtl-fix.css' %}">
+    <link rel="stylesheet" href="{% static 'css/theme-hotfix.css' %}">
 </head>
 <body>
     <!-- Loading Spinner -->
